--- a/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/bin/Index.html
+++ b/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/bin/Index.html
@@ -47,10 +47,10 @@
 
             function showLoggedInMenu(user) {
                 $('.menu').html(`
-                        <a href="Index.html">Flights</a>
-                        <a href="Profile.html">Profile</a>
-                        <a href="#" id="logout">Log out</a>
-                    `);
+                            <a href="Index.html">Flights</a>
+                            <a href="Profile.html">Profile</a>
+                            <a href="#" id="logout">Log out</a>
+                        `);
 
                 $('#logout').click(function () {
                     $.ajax({
@@ -68,10 +68,10 @@
 
             function showLoggedOutMenu() {
                 $('.menu').html(`
-                        <a href="Index.html">Flights</a>
-                        <a href="Register.html">Register</a>
-                        <a href="Login.html">Log in</a>
-                    `);
+                            <a href="Index.html">Flights</a>
+                            <a href="Register.html">Register</a>
+                            <a href="Login.html">Log in</a>
+                        `);
             }
 
             function loadFlights() {
@@ -107,7 +107,7 @@
                 select.empty();
                 select.append($('<option>', {
                     value: '',
-                    text: '-'
+                    text: 'All'
                 }));
                 airlines.forEach(function (airline) {
                     select.append($('<option>', {
@@ -122,13 +122,13 @@
 
                 let tableOfFlights = '<table border="1">';
                 if (currentUser && currentUser.userType === 'Traveler') {
-                    tableOfFlights += '<tr><th>Reserve</th><th>Id</th><th>Airline</th><th>From</th><th>Destination</th><th>Departure time</th><th>Arrival time</th><th>Available seats</th><th>Booked seats</th><th>Price(RSD)</th><th>Status</th></tr>';
+                    tableOfFlights += '<tr><th>Reserve</th><th>Id</th><th>Airline</th><th>Route</th><th>Departure time</th><th>Arrival time</th><th>Available seats</th><th>Booked seats</th><th>Price(RSD)</th><th>Status</th></tr>';
                 } else {
-                    tableOfFlights += '<tr><th>Id</th><th>Airline</th><th>From</th><th>Destination</th><th>Departure time</th><th>Arrival time</th><th>Available seats</th><th>Booked seats</th><th>Price(RSD)</th><th>Status</th></tr>';
+                    tableOfFlights += '<tr><th>Id</th><th>Airline</th><th>Route</th><th>Departure time</th><th>Arrival time</th><th>Available seats</th><th>Booked seats</th><th>Price(RSD)</th><th>Status</th></tr>';
                 }
 
                 if (activeFlights.length === 0) {
-                    tableOfFlights += '<tr><td colspan="11" style="font-size: 18px;">No active flights</td></tr>';
+                    tableOfFlights += '<tr><td colspan="10" style="font-size: 18px;">No active flights</td></tr>';
                 } else {
                     activeFlights.forEach(function (element) {
                         let flight = '<tr>';
@@ -137,14 +137,13 @@
                         }
                         flight += `<td>${element.id}</td>`;
                         flight += `<td><a href="#airlines" class="airline-name" data-airline='${JSON.stringify(element.airline)}'>${element.airline.name}</a></td>`;
-                        flight += '<td>' + element.from + '</td>';
-                        flight += '<td>' + element.destination + '</td>';
-                        flight += '<td>' + new Date(element.departureDateTime).toLocaleString() + '</td>';
-                        flight += '<td>' + new Date(element.arrivalDateTime).toLocaleString() + '</td>';
-                        flight += '<td>' + element.availableSeats + '</td>';
-                        flight += '<td>' + element.bookedSeats + '</td>';
-                        flight += '<td>' + element.price + '</td>';
-                        flight += '<td>' + element.status + '</td>';
+                        flight += `<td>${element.from} - ${element.destination}</td>`;
+                        flight += `<td>${new Date(element.departureDateTime).toLocaleString()}</td>`;
+                        flight += `<td>${new Date(element.arrivalDateTime).toLocaleString()}</td>`;
+                        flight += `<td>${element.availableSeats}</td>`;
+                        flight += `<td>${element.bookedSeats}</td>`;
+                        flight += `<td>${element.price}</td>`;
+                        flight += `<td>${element.status}</td>`;
                         flight += '</tr>';
                         tableOfFlights += flight;
                     });
@@ -174,8 +173,8 @@
                 let tableOfAirlines = '<table border="1">';
                 data.forEach(function (element) {
                     let airline = `<tr class="airline-row" data-airline='${JSON.stringify(element)}'>
-                            <td><h2 style="margin: 0;" class="airline-name">${element.name}</h2></td>
-                        </tr>`;
+                                <td><h2 style="margin: 0;" class="airline-name">${element.name}</h2></td>
+                            </tr>`;
                     tableOfAirlines += airline;
                 });
 
@@ -189,14 +188,14 @@
                         nextRow.remove();
                     } else {
                         $(this).after(`<tr class="airline-details">
-                                <td colspan="1">
-                                    <p><strong>Address:</strong> ${airlineData.address}</p>
-                                    <p><strong>Contact Info:</strong> ${airlineData.contactInfo}</p>
-                                    <div class="reviews">
-                                        ${renderReviews(airlineData.reviews)}
-                                    </div>
-                                </td>
-                            </tr>`);
+                                    <td colspan="1">
+                                        <p><strong>Address:</strong> ${airlineData.address}</p>
+                                        <p><strong>Contact Info:</strong> ${airlineData.contactInfo}</p>
+                                        <div class="reviews">
+                                            ${renderReviews(airlineData.reviews)}
+                                        </div>
+                                    </td>
+                                </tr>`);
                     }
                 });
             }
@@ -214,9 +213,9 @@
                 let reviewsHtml = '<h3>Reviews:</h3>';
                 approvedReviews.forEach(function (review) {
                     reviewsHtml += `<div class="review">
-                            <p><strong>Title:</strong> ${review.title}</p>
-                            <p>${review.content}</p>
-                        </div>`;
+                                <p><strong>Title:</strong> ${review.title}</p>
+                                <p>${review.content}</p>
+                            </div>`;
                 });
 
                 return reviewsHtml;
@@ -315,7 +314,7 @@
     <h1>Flights</h1>
     <div>
         <form id="searchForm">
-            <label for="airlineName">Airline Name:</label>
+            <label for="airlineName">Airline:</label>
             <select id="airlineName" style="width:150px"></select>
             <label for="from">From:</label>
             <input type="text" id="from" class="input-field">
